# awtk-minijvm

./: .gitignore  Makefile  README.md  run_common.sh  run_on_linux.sh  run_on_mac.sh  sync.sh  sync_assets.sh
c/: CMakeLists.txt  Makefile  custom.c  jni_awtk.c  jvm_helper.h
demos/: DemoButton.java  pom.xml
demos/src/main/java/demos/: Main.java
java/: pom.xml
java/src/main/java/awtk/: TCanvas.java  TEdit.java  TEventType.java  TKeyboard.java  TLabel.java  TMledit.java  TObjectCmd.java  TRichText.java  TWidget.java  TWidgetProp.java  TWindowBase.java
scripts/: update_res.py
